using Safari.Model;
using UnityEngine;

namespace Safari.View
{
    public class AnimalCollectionController
    {
        private AnimalDisplay[] displayers;
    }
}
